--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aula Experimental</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <a href="#"><img src="./images/logo pequeno caixa branco.png" alt="Logotipo da Natural Done"></a>
+  </header>
   <div class="page">
-    <header>
-      <h1>Formulário de agendamento de aula experimental</h1>
-    </header>
     <form id="my-form">
 
       <fieldset>
@@ -27,12 +27,16 @@
             <input type="text" name="" id="event-name" required>
           </div>
           <div class="input-wrapper">
-            <label for="event-link">Link do evento <span>(comece com http://)</span></label>
-            <input type="url" name="" id="event-link" required>
+            <label for="event-email">Email de contato <span>(digite um email válido)</span></label>
+            <input type="email" name="" id="event-email" required>
           </div>
           <div class="input-wrapper">
             <label for="event-whatsapp">Whatsapp para contato <span>(somente números)</span></label>
             <input type="number" name="" id="event-whatsapp">
+          </div>
+          <div class="input-wrapper">
+            <label for="event-password">Senha de acesso<span>(mínimo de 8 caracteres)</span></label>
+            <input type="password" name="" id="event-password" required minlength="8">
           </div>
           <div class="input-wrapper">
             <label for="event-info">Informações extras</label>
@@ -41,30 +45,15 @@
           <div class="input-wrapper">
             <label for="event-category">Categoria</label>
             <select name="" id="event-category">
-              <option value="live">Ao vivo</option>
-              <option value="podcast">Podcast</option>
-              <option value="mentorship">Mentoria</option>
+              <option value="live">Padrão</option>
+              <option value="podcast">Calistenia</option>
+              <option value="mentorship">Postural</option>
             </select>
+            <div class="checkbox-wrapper">
+              <input type="checkbox" name="" id="event-private">
+              <label for="event-private">Evento privado</label>
+            </div>
           </div>
-        </div>
-      </fieldset>
-      <fieldset>
-        <div class="fieldset-wrapper">
-          <legend>Privacidade</legend>
-
-          <div class="input-wrapper">
-            <label for="event-email">Email do administrador <span>(digite um email válido)</span></label>
-            <input type="email" name="" id="event-email" required>
-          </div>
-          <div class="input-wrapper">
-            <label for="event-password">Senha de acesso para os participantes <span>(mínimo de 8 caracteres)</span></label>
-            <input type="password" name="" id="event-password" required minlength="8">
-          </div>
-          <div class="checkbox-wrapper">
-            <input type="checkbox" name="" id="event-private">
-            <label for="event-private">Evento privado</label>
-          </div>
-
         </div>
       </fieldset>
       <fieldset>
@@ -77,19 +66,15 @@
               <input type="date" name="" id="event-date">
             </div>
             <div class="input-wrapper">
-              <label for="event-begin">Das</label>
+              <label for="event-begin">Horário</label>
               <input type="time" name="" id="event-begin">
-            </div>
-            <div class="input-wrapper">
-              <label for="event-end">Até</label>
-              <input type="time" name="" id="event-end">
             </div>
           </div>
         </div>
       </fieldset>
     </form>
     <footer>
-      <button class="button" form="my-form">Salvar evento</button>
+      <button class="button" form="my-form">Marcar aula experimental</button>
     </footer>
   </div>
 </body>
